# data-engineering-learning-ceva

./: CLAUDE.md  README.md  old-CLAUDE.md  pyproject.toml
.claude/agents/: data-analyst.md  data-architect.md  data-modeler.md  implementer.md
.claude/skiiiiils-old/python-env/: pyproject.toml.template  skill.md
.claude/skiiiiils-old/python-env-uv/: SKILL.md
docs/: documentation.md
perso/dig/: debussy.md
work/agent/: SECURITY_ARCHITECTURE.md  TIMEOUT_HANDLING.md  agent-specifications.md  agent.py  test_dynamic_execution.py  test_integration_no_file_writing.py  test_malicious_code_detection.py  test_restricted_exec.py  test_security_validation.py  test_timeout_handling.py  test_timeout_verification.py
work/agent/agent-specifications/: agent-specifications.md
work/agent/nodes/: __init__.py  execute_sql.py  generate_sql.py  generate_streamlit.py  generate_streamlit_views.py  select_visualization.py  validate_sql.py
work/agent/tests/: test_dynamic_execution.py  test_integration_no_file_writing.py  test_malicious_code_detection.py  test_security_validation.py  test_timeout_handling.py  test_timeout_verification.py
work/data/: semantic_layer.yaml
work/data/a-sources/: bu_companion_catalog.json  bu_poultry_production.csv  bu_ruminants_production.csv  data-description.md  generate_ceva_data.py
work/data/b-silver-star-schema/: dim_product.parquet  dim_site.parquet  dim_specie.parquet  fact_batch_production.parquet  star-schema-modelisation.md
work/scripts/: etl_to_star_schema.py  test_star_schema.ipynb
work/streamlit-app/: streamlit_app.py
(+9 files in other folders)
